packages/isar_plus/test/errors/index/contains_int_id.dart
// ids cannot be indexed

import 'package:isar_plus/isar_plus.dart';

@collection
class Model {
  late int id;

  @Index(composite: ['id'])
  int? str;
}
